--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -10,5 +10,7 @@
 
     <p>
         <b>    this is my learning</b>
+        <br />
+        <b>    this is my through GIT HUB</b>
     </p>
 </div>
