--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -11,6 +11,6 @@
     <p>
         <b>    this is my learning</b>
         <br />
-        <b>    this is my through GIT HUB</b>
+        <b style="background-color: orangered">    this is my through GIT HUB</b>
     </p>
 </div>
