Testign Deployment Slot

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -11,6 +11,8 @@
     <p>
         <b>    this is my learning</b>
         <br />
-        <b style="background-color: orangered">    this is my through GIT HUB</b>
+        <b style="background-color: orangered">this is my through GIT HUB</b>
+        <b style="background-color: yellow">this is for Deployment Slot</b>
+
     </p>
 </div>
